uncommented div elements in week 2 lecture's todo example

--- a/lectures/02/src/todo/index.html
+++ b/lectures/02/src/todo/index.html
@@ -17,14 +17,14 @@
         id="content_form"
         type="text"
         class="form_element"
-        placeholder="Enter your ToDo item"
+        placeholder="Enter ToDo item"
         name="item"
         required
       />
     </form>
 
     <div id="items">
-      <!--div class="item">
+      <div class="item">
             <div class="item_content">Fill the C09 Github registration form!</div>
             <div class="delete-icon icon"></div>
         </div-->
